--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description" content="growbro.ai empowers Indian businesses with modern AI automation and customer engagement solutions. Unlock growth with premium, secure, and easy-to-use AI." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -21,7 +21,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Lets grow bro</title>
+    <title>growbro.ai – AI for Business Growth</title>
+    <meta property="og:title" content="growbro.ai – AI for Business Growth" />
+    <meta property="og:description" content="Empowering Indian businesses with modern AI automation and customer engagement. Unlock growth with premium, secure, and easy-to-use AI." />
+    <meta property="og:image" content="%PUBLIC_URL%/og-image.png" />
+    <meta property="og:url" content="https://www.growbro.ai/" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="growbro.ai – AI for Business Growth" />
+    <meta name="twitter:description" content="Empowering Indian businesses with modern AI automation and customer engagement. Unlock growth with premium, secure, and easy-to-use AI." />
+    <meta name="twitter:image" content="%PUBLIC_URL%/og-image.png" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
